# logic-pro-audio-arranger

./: .gitignore  README.md  pyproject.toml
docs/: SEO.md
examples/: c_major_hook.csv
final_test/: validate_midi.py
knowledge/: brave_search.py  fetch_and_extract.py  gen_arrangement_knowledge.py  gen_chord_progressions.py  gen_melody_accompaniment.py  gen_mood_mappings.py  gen_rhythm_bass.py  gen_section_tension.py  gen_song_analyses.py  gen_theory_data.py  init_db.py  knowledge.db  search_queries.py
knowledge/extracted/: melody_accompaniment_enriched.json  mood_music_enriched.json  section_patterns_enriched.json  song_analysis_enriched.json  tension_energy_enriched.json
knowledge/search_results/: melody_accompaniment.json  mood_music.json  real_midi_projects.json  section_patterns.json  song_analysis.json  tension_energy.json
melody_architect/: __init__.py  analysis.py  arrangement.py  cli.py  composition.py  creativity.py  gui.py  harmony.py  io_audio.py  io_csv.py  io_midi.py  io_musicxml.py  logic_export.py  midi_pack.py  midi_writer.py  models.py  pipeline.py  reporting.py  theory.py  validation.py  webapp.py
melody_architect/frontend/: index.html  studio.js  styles.css
packaging/macos/: README_MAC_APP.md  open_terminal_cli.command
scripts/: build_macos_app.sh
site/: index.html  robots.txt  sitemap.xml
tests/: test_analysis_and_harmony.py  test_audio_io.py  test_composition.py  test_logic_export.py  test_midi_pack.py  test_midi_parser.py  test_pipeline_and_cli.py
web/: .env.example  package.json  tsconfig.app.json
web/public/demo/: llm_output_balanced.mid  llm_output_creative.mid
web/scripts/: build.mjs
web/src/: App.css  App.tsx  i18n.ts  index.css  theme.css
web/src/components/: AnalysisView.tsx  ArrangementView.css  ArrangementView.tsx  ControlBar.css  ControlBar.tsx  CreativityLevel.css  (+14 more)
(+4 files in other folders)
